Change font family to 'Courier New' in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
     
     body {
-        font-family: Arial, sans-serif;
+        font-family: 'Courier New', Courier, monospace;
         padding: 20px;
         margin: 0;
         background: linear-gradient(135deg, #f3f6ff, #e8faff);
@@ -278,3 +278,4 @@ function calculateAttendance() {
 </script>
 </body>
 </html>
+
