--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     body {
         font-family: 'Courier New', Courier, monospace;
+        font-weight: bold;
         padding: 20px;
         margin: 0;
         background: linear-gradient(135deg, #f3f6ff, #e8faff);
@@ -278,4 +279,5 @@ function calculateAttendance() {
 </script>
 </body>
 </html>
+
 
